--- a/embold-blue.com/solutions-industry.html
+++ b/embold-blue.com/solutions-industry.html
@@ -45,19 +45,19 @@
           </div>
           <ul class="tab-wrap">
             <li class="tab-item init active">
-              <img src="images/ic-sm-user-executive.svg" width="24" /> Automotive
+              <img src="images/ic-sm-car-wh.svg" width="24" /> Automotive
             </li>
             <li class="tab-item">
-              <img src="images/ic-sm-user-developer.svg" width="24" /> Financial
+              <img src="images/ic-sm-financial.svg" width="24" /> Financial
             </li>
             <li class="tab-item">
-              <img src="images/ic-sm-user-architect.svg" width="24" /> Industrial
+              <img src="images/ic-sm-industrial-building.svg" width="24" /> Industrial
             </li>
             <li class="tab-item">
-              <img src="images/ic-sm-user-pm.svg" width="24" /> Technology/Telecom
+              <img src="images/ic-sm-technology.svg" width="24" /> Technology/Telecom
             </li>
             <li class="tab-item">
-              <img src="images/ic-sm-user-pm.svg" width="24" /> Others
+              <img src="images/ic-sm-dots.svg" width="24" /> Others
             </li>
           </ul>
         </div>
