--- a/embold-blue.com/company-about.html
+++ b/embold-blue.com/company-about.html
@@ -31,8 +31,8 @@
     <div class="row">
       <div class="col-8">
         <h1 class="header-sub-title">
-          We need to change<br />
-          how we write code. Period
+          You write code.<br />
+          Let's rewrite software history together.
         </h1>
       </div>
     </div>
@@ -46,10 +46,10 @@
             <div class="icon ic-people">
             </div>
             <div class="title">
-              50+ Embolder
+              50+ Colleagues
             </div>
             <div class="description">
-              Great Colleagues into One Team
+              To embolden software developers worldwide
             </div>
           </div>
           <div class="block-column">
@@ -59,27 +59,27 @@
               3 Offices
             </div>
             <div class="description">
-              Let’s put Coffee into your brains
+              On 3 continents
             </div>
           </div>
           <div class="block-column">
             <div class="icon ic-flag">
             </div>
             <div class="title">
-              7 Nationalities
+              15+ Nationalities
             </div>
             <div class="description">
-              Let’s put Coffee into your brains
+              Working together
             </div>
           </div>
           <div class="block-column">
             <div class="icon ic-gender">
             </div>
             <div class="title">
-              46% Women
+              40% women/60 % men
             </div>
             <div class="description">
-              Let’s put Coffee into your brains
+              Working together as a stong team
             </div>
           </div>
         </div>
@@ -91,34 +91,8 @@
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">We are a software company building products for the future</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-      <div class="col-5">
-        <div class="il-alt background-no-repeat body-illustration"></div>
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-1">
-      </div>
-      <div class="col-5">
-        <div class="il-alt background-no-repeat body-illustration"></div>
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">We are a diverse, Global team</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-left">
-    <div class="row">
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">We are a software company building products for the future</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+        <h2 class="section-title">We embolden developers in their everyday challenges of designing software.</h2>
+        <p class="description">With users in more than 20 countries worldwide our software analysis platform is the number one choice of both individual coders and developer teams of any size.</p>
       </div>
       <div class="col-5">
         <div class="il-alt background-no-repeat body-illustration"></div>
@@ -132,15 +106,11 @@
         <div class="col-12">
           <span class="icon-section ic-timeline"></span>
           <h2 class="section-title">Timeline</h2>
-          <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+          <p class="block-description">We started extensive research and develpment when we founded our company in 2009</p>
         </div>
-      </div>
-    </div>
-    <div class="wrap-timeline">
-      <div class="content-timeline">
-      </div>
-      <div class="arrow-right link-arrow">
-
+        <div class="col-12">
+          <img src="images/timeline-sample.svg" width="100%" height="auto" />
+        </div>
       </div>
     </div>
   </section>
@@ -150,7 +120,7 @@
       <div class="col-12">
         <span class="icon-section ic-office-location"></span>
         <h2 class="section-title">Offices</h2>
-        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+        <p class="block-description">Founded and headquartered in Germany, in close proximity to the country's strong economic regions. While the heart of our operations is based in Frankfurt, Germany, we pride ourselves with international competence centres in EMEA, India and APAC.</p>
       </div>
       <div class="body-content">
         <div class="col-12">
