--- a/embold-blue.com/company-careers.html
+++ b/embold-blue.com/company-careers.html
@@ -44,35 +44,59 @@
         <h2 class="section-title">Our Team Value</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="body-content">
-        <div class="col-6">
-          <div class="wrap-value">
-            <div class="photo bg-team-value-international photo-company-team-value-1"></div>
-            <h3 class="title">International</h3>
-            <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
-            </p>
-          </div>
-          <div class="wrap-value">
-            <div class="photo bg-team-value-international photo-company-team-value-2"></div>
-            <h3 class="title">One goal, One team</h3>
-            <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
-            </p>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="wrap-value wrap-value-left">
-            <div class="photo bg-team-value-international photo-company-team-value-3"></div>
-            <h3 class="title">Best Environment</h3>
-            <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et scelerisque enim. Donec porttitor bibendum dui, a fringilla nisl ullamcorper quis. Class aptent taciti sociosqu ad litora torquent per conubia.
-            </p>
-          </div>
-        </div>
+    </div>
+  </section>
+  <section class="container block block-section-sub block-section-left">
+    <div class="row">
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">We embolden developers in their everyday challenges of designing software.</h2>
+        <p class="description">With users in more than 20 countries worldwide our software analysis platform is the number one choice of both individual coders and developer teams of any size.</p>
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
       </div>
     </div>
   </section>
+  <section class="container block block-section-sub block-section-right">
+    <div class="row">
+      <div class="col-1"></div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Every idea brings us forward</h2>
+        <p class="description">We value initiative, bold ideas and personal comittment. Every idea brings us forward. This is why our team members are our most valuable asssets.</p>
+      </div>
+    </div>
+  </section>
+  <section class="container block block-section-sub block-section-left">
+    <div class="row">
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">We believe in data and AI</h2>
+        <p class="description">We constantly innovate. Based on years of our research and development, we build techology that disrupts the industry.</p>
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+    </div>
+  </section>
+  <section class="container block block-section-sub block-section-right">
+    <div class="row">
+      <div class="col-1"></div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">We ask "Why not?"</h2>
+        <p class="description">Where others see obstacles, we take on the challenge. We ask ""Why not?"", instead of ""we don't know"". We create opportunities and stay curious.</p>
+      </div>
+    </div>
+  </section>
+
   <section class="container block block-section-sub company-benefit">
     <div class="row">
       <div class="col-12">
