--- a/embold-blue.com/solutions-industry-financial.html
+++ b/embold-blue.com/solutions-industry-financial.html
@@ -44,20 +44,20 @@
             Select a your Industry <img src="./images/ic-md-arrow-slim-right.svg" width="24" height="24" />
           </div>
           <ul class="tab-wrap">
-            <li class="tab-item init">
-              <img src="images/ic-sm-user-executive.svg" width="24" /> Automotive
+            <li class="tab-item init" onclick="window.location.href='./solutions-industry.html'">
+              <img src="images/ic-sm-car.svg" width="24" /> Automotive
             </li>
-            <li class="tab-item active">
-              <img src="images/ic-sm-user-developer.svg" width="24" /> Financial
+            <li class="tab-item active" onclick="window.location.href='./solutions-industry-financial.html'">
+              <img src="images/ic-sm-financial-wh.svg" width="24" /> Financial
             </li>
-            <li class="tab-item">
-              <img src="images/ic-sm-user-architect.svg" width="24" /> Industrial
+            <li class="tab-item" onclick="window.location.href='./solutions-industry-industrial.html'">
+              <img src="images/ic-sm-industrial-building.svg" width="24" /> Industrial
             </li>
-            <li class="tab-item">
-              <img src="images/ic-sm-user-pm.svg" width="24" /> Technology/Telecom
+            <li class="tab-item" onclick="window.location.href='./solutions-industry-tt.html'">
+              <img src="images/ic-sm-technology.svg" width="24" /> Technology/Telecom
             </li>
-            <li class="tab-item">
-              <img src="images/ic-sm-user-pm.svg" width="24" /> Others
+            <li class="tab-item" onclick="window.location.href='./solutions-industry-others.html'">
+              <img src="images/ic-sm-dots.svg" width="24" /> Others
             </li>
           </ul>
         </div>
