--- a/embold-blue.com/nav.html
+++ b/embold-blue.com/nav.html
@@ -100,22 +100,10 @@
     </div>
     <div class="nav-wrap-items">
       <div class="nav-item-main">
-        <a href="resources-product.html" class="nav-menu-link">Product</a>
-        <ul class="nav-item-sub-list">
-          <li>FAQ</li>
-          <li>Onboarding Guide</li>
-          <li>Handbook</li>
-          <li>Technicial Documentation</li>
-          <li>Installer</li>
-        </ul>
+        <a href="resources-product.html" class="nav-menu-link">FAQ</a>
       </div>
       <div class="nav-item-main">
-        <a href="resources-download.html" class="nav-menu-link">Download</a>
-        <ul class="nav-item-sub-list">
-          <li>White Papers</li>
-          <li>Case Studies</li>
-          <li>Success Stories</li>
-        </ul>
+        <a href="resources-product.html" class="nav-menu-link">Documentation</a>
       </div>
       <div class="cb"></div>
     </div>
