--- a/embold-blue.com/solutions-industry.html
+++ b/embold-blue.com/solutions-industry.html
@@ -44,19 +44,19 @@
             Select a your Industry <img src="./images/ic-md-arrow-slim-right.svg" width="24" height="24" />
           </div>
           <ul class="tab-wrap">
-            <li class="tab-item init active">
+            <li class="tab-item init active" onclick="window.location.href='./solutions-industry.html'">
               <img src="images/ic-sm-car-wh.svg" width="24" /> Automotive
             </li>
-            <li class="tab-item">
+            <li class="tab-item" onclick="window.location.href='./solutions-industry-financial.html'">
               <img src="images/ic-sm-financial.svg" width="24" /> Financial
             </li>
-            <li class="tab-item">
+            <li class="tab-item" onclick="window.location.href='./solutions-industry-industrial.html'">
               <img src="images/ic-sm-industrial-building.svg" width="24" /> Industrial
             </li>
-            <li class="tab-item">
+            <li class="tab-item" onclick="window.location.href='./solutions-industry-tt.html'">
               <img src="images/ic-sm-technology.svg" width="24" /> Technology/Telecom
             </li>
-            <li class="tab-item">
+            <li class="tab-item" onclick="window.location.href='./solutions-industry-others.html'">
               <img src="images/ic-sm-dots.svg" width="24" /> Others
             </li>
           </ul>
