--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -63,9 +63,7 @@
           <div class="index-arrow arrow-1-2"></div>
           <div class="wrap-workflow workflow-1">
             <div class="wrap-animation">
-              <div class="logo-github item-logo"></div>
-              <div class="logo-bitbucket item-logo"></div>
-              <div class="logo-jenkins item-logo"></div>
+              <object type="image/svg+xml" data="images/il-index-step-1.svg" width="210" height="auto" class="box-shadow"></object>
             </div>
             <div class="wrap-text">
               <span class="step-number">1</span>
@@ -80,7 +78,7 @@
           <div class="index-arrow arrow-1-2"></div>
           <div class="wrap-workflow workflow-2">
             <div class="wrap-animation">
-              <div class="logo-embold"></div>
+              <object type="image/svg+xml" data="images/il-index-step-2.svg" width="210" height="auto" class="box-shadow"></object>
             </div>
             <div class="wrap-text">
               <span class="step-number">2</span>
@@ -95,7 +93,7 @@
           <div class="wrap-workflow workflow-3">
             <div class="wrap-animation">
               <div class="index-step-3 item-logo">
-                <object type="image/svg+xml" data="images/index-step-3-animate.svg"></object>
+                <object type="image/svg+xml" data="images/il-index-step-3-animate.svg"></object>
               </div>
             </div>
             <div class="wrap-text">
@@ -260,8 +258,6 @@
     </div>
   </section>
   <div class="container-fluid block-footer-contact bg-orange">
-    <div class="bg-fw-half-left bg-color-gray800"></div>
-    <div class="bg-fw-half-right bg-color-orange800"></div>
     <div class="container-fluid block">
       <div class="row">
         <div class="col-6 text-center">
@@ -273,7 +269,7 @@
               Multiple cloud or on-premise plans are available.<br />
               for commercial projects.
             </p>
-            <button class="btn btn-dark btn-md btn-more" onclick="window.location.href='./resources-product.html'">Choose Plan</button>
+            <button class="btn btn-default btn-md btn-more" onclick="window.location.href='./resources-product.html'">Choose Plan</button>
           </div>
         </div>
         <div class="col-6 text-center">
