edited index file

--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -229,7 +229,11 @@
         </div>
       </div>
       <div class="col-4">
-        <div class="box-default partnership-photo">
+        <div class="box-default partnership-photo partnership-review">
+          <div class="name">
+            David Starr,<br />
+            Healthwise
+          </div>
         </div>
       </div>
       <div class="col-4">
