--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         </div>
         <div class="block-btn">
             <input type="button" class="btn btn-print" value="Print it!" onclick="window.print()"/>
+            <span>We 💚 <a href="https://embold.io" target="_blank">Embold</a></span>
         </div>
     </div>
   </body>
