--- a/index.html
+++ b/index.html
@@ -129,4 +129,24 @@
         $('.display-body').removeClass('body-1 body-2 body-3').addClass('body-4');
     });
   </script>
+  <script type="text/javascript">
+		<!--//--><![CDATA[//><!--
+			var images = new Array()
+			function preload() {
+				for (i = 0; i < preload.arguments.length; i++) {
+					images[i] = new Image()
+					images[i].src = preload.arguments[i]
+				}
+			}
+			preload(
+				"../svg/face-1.svg",
+                "../svg/face-2.svg",
+                "../svg/face-3.svg",
+                "../svg/body-1.svg",
+                "../svg/body-2.svg",
+                "../svg/body-3.svg",
+				"../svg/body-4.svg"
+			)
+		//--><!]]>
+	</script>
 </html>
