- change the preloader

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 				}
 			}
 			preload(
-				"../svg/face-1.svg",
-                "../svg/face-2.svg",
-                "../svg/face-3.svg",
-                "../svg/body-1.svg",
-                "../svg/body-2.svg",
-                "../svg/body-3.svg",
-				"../svg/body-4.svg"
+				"/svg/face-1.svg",
+                "/svg/face-2.svg",
+                "/svg/face-3.svg",
+                "/svg/body-1.svg",
+                "/svg/body-2.svg",
+                "/svg/body-3.svg",
+				"/svg/body-4.svg"
 			)
 		//--><!]]>
 	</script>
