--- a/index.html
+++ b/index.html
@@ -6,76 +6,145 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/embold.css">
   <link rel="icon" href="/icon.svg">
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <title>Embold</title>
 </head>
-<body style="padding-top:0 !important;">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h2>Loader Sample</h2>
-      </div>
-      <div class="col-md-3">
-        <h4>Loader 1</h4>
-        <lottie-player src="/json/Loader-Type-1.json"  background="transparent"  speed="0.8"  style="width: 80px; height: 80px;"  loop  autoplay></lottie-player>
-      </div>
-      <div class="col-md-3">
-        <h4>Loader 2</h4>
-        <lottie-player src="/json/Loader-Type-2.json"  background="transparent"  speed="0.8"  style="width: 80px; height: 80px;"  loop  autoplay></lottie-player>
-      </div>
-      <div class="col-md-3">
-        <h4>Loader 3</h4>
-        <lottie-player src="/json/Loader-Type-3.json"  background="transparent"  speed="0.8"  style="width: 80px; height: 80px;"  loop  autoplay></lottie-player>
-      </div>
+<body>
+  <nav class="navbar navbar-inverse navbar-fixed-top navbar-primary">
+    <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#" style="padding-top: 16px;padding-left: 16px;"><img src="img/logo-white.svg" width="100" height="28" /></a>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <h2>Scan Progress</h2>
-      </div>
-      <div class="col-md-3">
-        <div class="box-style" style="width:367px;height:486px;margin-top: 14px; background-image:url('./img/image-repository.png');background-repeat: no-repeat;background-size:367px 486px;position:relative;" id="repository-off">
-          <div class="click-area" style="width:36px;height:36px;top:20px;right:20px;cursor: pointer !important;" id="more">
-          </div>
-          <div class="box-style context context-repository" id="context">
-            <ul>
-              <li>
-                <a href="#" id="scan">Scan repository</a>
-              </li>
-              <li>
-                <a href="#">Manage repository</a>
-              </li>
-              <li>
-                <a href="#" class="color-failed">Delete repository</a>
-              </li>
-            </ul>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav menu menu-main">
+        <li class="active"><a href="#">Dashboard</a></li>
+        <li><a href="#">Repositories</a></li>
+        <li><a href="#">Scans</a></li>
+        <li><a href="#">Admin</a></li>
+      </ul>
+
+
+      <ul class="nav navbar-nav navbar-right menu icon">
+        <li><a href="#"><img src="img/profile.svg" width="20px" height="20px" /></a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right menu icon" style="margin-left:-4px;">
+        <li><a href="#"><img src="img/icon-noti-on.svg" width="24px" height="24px" /></a></li>
+      </ul>
+      <form class="navbar-form navbar-right menu menu-icon" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control search-global" placeholder="Search">
+        </div>
+      </form>
+      <ul class="nav navbar-nav navbar-right menu icon">
+        <li><a href="#"><img src="img/icon-help.svg" width="24px" height="24px" /></a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+    <div id="navbar-second">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 navbar-second-title">
+            Repository
           </div>
         </div>
-        <div id="repository-on">
-          <div class="box-style" style="width:367px;height:502px;margin-top:0;padding-top:48px;background-image:url('./img/image-repository.png');background-repeat: no-repeat;background-position: 0 14px; background-size:367px 486px;position:relative;">
-            <div class="progress-scan">
-              59% in scanning
+      </div>
+    </div>
+  </nav>
+  <div class="container wrap-summary clearfix">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="box-style full-width">
+          <div class="col-5th">
+            <div class="header-block">
+              <span class="icon"><img src="img/icon-repositories.svg" /></span>
+              <span class="title">Repository</span>
+            </div>
+            <div class="content">
+              test
+            </div>
+          </div>
+          <div class="col-5th">
+            <div class="header-block">
+              <span class="icon"><img src="img/icon-overall-rating-1.svg" /></span>
+              <span class="title">Overall Rating</span>
+            </div>
+            <div class="content">
+              test
+            </div>
+          </div>
+          <div class="col-5th">
+            <div class="header-block">
+              <span class="icon"><img src="img/icon-loc.svg" /></span>
+              <span class="title">Lines of Code</span>
+            </div>
+            <div class="content">
+              test
+            </div>
+          </div>
+          <div class="col-5th">
+            <div class="header-block">
+              <span class="icon"><img src="img/icon-qc.svg" /></span>
+              <span class="title">Quality Checkpoint</span>
+            </div>
+            <div class="content">
+              test
+            </div>
+          </div>
+          <div class="col-5th clearfix">
+            <div class="header-block">
+              <span class="icon"><img src="img/icon-language.svg" /></span>
+              <span class="title">Languages</span>
+            </div>
+            <div class="content">
+              test
             </div>
           </div>
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="title-section">
+          Repositories
+        </div>
+      </div>
+      <div class="col-lg-12">
+        <div class="box-style">
+          Filter
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-3">
+        <div class="box-style">
+          test
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-3">
+        <div class="box-style">
+          test
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-3">
+        <div class="box-style">
+          test
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-3">
+        <div class="box-style">
+          test
+        </div>
+      </div>
+    </div>
   </div>
   <script src="bootstrap.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-  <script>
-  $(document).ready(function(){
-    $("#scan").click(function(){
-      $("#repository-on").show();
-     $("#repository-off").hide();
-    });
-  });
-  </script>
-  <script>
-  $(document).ready(function(){
-    $("#more").click(function(){
-      $("#context").toggle();
-    });
-  });
-  </script>
 </body>
 </html>
